--- a/portfolio2.css
+++ b/portfolio2.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 .header {
     font-family: "Pacifico", cursive;
